# LaserStrike

./: .gitignore  ReadMe.md  ReadMe.txt  pyproject.toml  requirements.txt
backend/: CodeGenerator.py  ComputerVision.py  DEPLOYMENT.md  main.py  models.py  render.yaml  requirements.txt  services.py  services_simple.py
frontend/laserstrike/: .env.local  .env.production  .env.production.template  DEPLOYMENT.md  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/laserstrike/app/: globals.css  layout.tsx
frontend/laserstrike/app/(root)/: layout.tsx  page.tsx
frontend/laserstrike/app/admin/: .eslintrc.js  page.tsx
frontend/laserstrike/app/login/: page.tsx
frontend/laserstrike/app/spactator/: page.tsx
frontend/laserstrike/app/spectator/: page.tsx
frontend/laserstrike/app/start/: page.tsx
frontend/laserstrike/components/: AvatarSelector.tsx  CameraViewer.tsx  GameOver.tsx  TargetIcon.tsx  healthbar.tsx
frontend/laserstrike/lib/: Types.ts  socket.ts
frontend/laserstrike/lib/actions/: game.actions.ts
frontend/laserstrike/lib/hooks/: useGameReset.ts  useShotEvents.ts
frontend/laserstrike/styles/: global.css
