[project]
name = "laserstrike"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "easyocr==1.7.2",
    "executing==2.2.0",
    "fastapi==0.115.14",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "iniconfig==2.1.0",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "lazy-loader==0.4",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "networkx==3.5",
    "ninja==1.11.1.4",
    "numpy==2.2.6",
    "opencv-python-headless==4.11.0.86",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyclipper==1.3.0.post6",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pygments==2.19.2",
    "pytest==8.3.5",
    "python-bidi==0.6.6",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "setuptools==80.8.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.6.11",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
]
